# wgpu_journey

./: Cargo.toml  Readme.md
examples/: game_of_life.rs
src/: lib.rs  main.rs  primitives.rs  render_context.rs  render_state.rs  shader.wgsl  window.rs
